--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/p5": "^0.9.0",
     "material-components-web": "^4.0.0",
     "normalize.css": "^8.0.1"
   }
