--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@material/typography": "^4.0.0",
+    "@types/chrome": "0.0.102",
     "@types/p5": "^0.9.0",
     "awesome-typescript-loader": "^5.2.1",
     "fibers": "^4.0.2",
